--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "prepare": "husky"
+    "precommit": "lint-staged --no-stash"
   },
   "lint-staged": {
     "*.{js,ts,jsx,tsx}": [
