--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -1,46 +1,57 @@
-name: Deploy PWA – Dev → Prod bucket
+name: Deploy PWA – Dev → Prod bucket
 
 on:
   push:
     branches: [dev]
 
 permissions:
-  id-token: write       
-  contents: read        
+  id-token: write
+  contents: read
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     env:
-      AWS_BUCKET: ${{ secrets.AWS_BUCKET }}             
-      CF_DISTRIBUTION: ${{ secrets.CF_DISTRIBUTION }}  
+      AWS_BUCKET: ${{ secrets.AWS_BUCKET }}
+      CF_DISTRIBUTION: ${{ secrets.CF_DISTRIBUTION }}
 
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+      - name: Setup Node.js with caching
+        uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
+          cache: 'npm'
+
+      - name: Restore Vite build cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            node_modules
+            .vite
+          key: vite-cache-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            vite-cache-${{ runner.os }}-
 
       - name: Install deps
         run: npm ci --prefer-offline --no-audit
 
-      - name: Build (Vite)
+      - name: Build Vite app
         run: npm run build
 
-      - name: Assume AWS role via OIDC
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Sync to S3 (overwrites prod)
+      - name: Deploy to S3
         run: |
           aws s3 sync dist/ s3://$AWS_BUCKET \
             --delete \
-            --cache-control public,max-age=31536000,immutable
+            --cache-control "public, max-age=31536000, immutable"
 
       - name: Invalidate CloudFront
         run: |
