--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.1",
     "@tailwindcss/vite": "^4.1.6",
+    "i18next": "^25.1.2",
+    "i18next-browser-languagedetector": "^8.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
     "tailwindcss": "^4.1.6"
