--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-i18next": "^15.5.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
+    "redux-persist": "^6.0.0",
+    "redux-persist-transform-encrypt": "^5.1.1",
     "tailwindcss": "^4.1.6",
     "zod": "^3.24.4"
   },
