--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@reduxjs/toolkit": "^2.8.1",
-    "@tailwindcss/vite": "^4.1.6",
     "i18next": "^25.1.2",
     "i18next-browser-languagedetector": "^8.1.0",
+    "idb": "^8.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
@@ -32,7 +32,11 @@
     "react-router-dom": "^7.6.0",
     "redux-persist": "^6.0.0",
     "redux-persist-transform-encrypt": "^5.1.1",
-    "tailwindcss": "^4.1.6",
+    "workbox-cacheable-response": "^7.0.0",
+    "workbox-expiration": "^7.0.0",
+    "workbox-precaching": "^7.0.0",
+    "workbox-routing": "^7.0.0",
+    "workbox-strategies": "^7.0.0",
     "zod": "^3.24.4"
   },
   "devDependencies": {
@@ -41,6 +45,7 @@
     "@types/react-dom": "^19.1.2",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.17",
     "eslint": "^9.25.0",
     "eslint-import-resolver-typescript": "^4.3.4",
     "eslint-plugin-import": "^2.31.0",
@@ -49,7 +54,9 @@
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.0.0",
+    "postcss": "^8.4.35",
     "prettier": "^3.5.3",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
